fix: added null safety operator

--- a/src/once-ui/components/Button.module.scss
+++ b/src/once-ui/components/Button.module.scss
@@ -55,7 +55,7 @@
     border: 1px solid var(--static-transparent);
 
     &:hover, &:focus {
-        border: 1px solid var(--neutral-border-medium);
+        border: 1px solid var(--brand-border-strong);
     }
 
     &:disabled {
