--- a/src/once-ui/components/StyleOverlay.module.scss
+++ b/src/once-ui/components/StyleOverlay.module.scss
@@ -1,9 +1,9 @@
 .panel {
     visibility: hidden;
     opacity: 0;
-    z-index: -1;
+    z-index: 2;
     transform: scale(0.2);
-    transform-origin: top right;
+    // transform-origin: top right;
 
     &.open {
         transform: scale(1);
